fix cyclic dependency in openapi schema
