# api/handlers/event.go
@@ -306,7 +306,7 @@ func (h *Handler) ReplayEndpointEvent(w http.ResponseWriter, r *http.Request) {
 //	@Produce		json
 //	@Param			projectID	path		string					true	"Project ID"
 //	@Param			request		query		models.QueryListEvent	false	"Query Params"
-//	@Success		200			{object}	util.ServerResponse{data=datastore.Event{data=Stub}}
+//	@Success		200			{object}	util.ServerResponse{data=string}
 //	@Failure		400,401,404	{object}	util.ServerResponse{data=Stub}
 //	@Security		ApiKeyAuth
 //	@Router			/v1/projects/{projectID}/events/batchreplay [post]
